--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "events": "^1.1.1",
     "jslib": "https://github.com/app-masters/js-lib.git"
   }
 }
