--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@app-masters/redux-lib",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist/ && babel src/ -d dist",
-    "postinstall": "npm run build"
+    "prepublish": "npm run build",
+    "postinstall": "echo \"You don't need wait for builds here anymore. Give thanks to @TiagoGouvea!"
   },
   "author": "",
   "license": "ISC",
