--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,15 @@
         "targets": {
           "browsers": ["last 2 versions", "safari >= 7"]
         }
-      }]
+      }],
+      "stage-1"
     ],
-    "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+    "plugins": [
+      "transform-class-properties",
+      "transform-object-rest-spread",
+      ["transform-runtime", {
+        "polyfill": false,
+        "regenerator": true
+      }]
+    ]
 }
