--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@app-masters/redux-lib",
-  "version": "1.0.30",
+  "version": "1.0.31",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.1.6"
+    "@babel/preset-env": "^7.1.6",
+    "@babel/runtime": "^7.1.5"
   }
 }
