Log details added

--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,27 @@
 {
-    "presets": [
-        ["env", {
+  "presets": [
+    [
+      "env",
+      {
         "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"]
+          "browsers": [
+            "last 2 versions",
+            "safari >= 7"
+          ]
         }
-      }],
-      "stage-1"
+      }
     ],
-    "plugins": [
-      "transform-class-properties",
-      "transform-object-rest-spread",
-      ["transform-runtime", {
+    "stage-1"
+  ],
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    [
+      "transform-runtime",
+      {
         "polyfill": false,
         "regenerator": true
-      }]
+      }
     ]
+  ]
 }
